fixed small visual bug with tab headers with no image on mobile.

--- a/client/src/Content/tabs.css
+++ b/client/src/Content/tabs.css
@@ -91,6 +91,9 @@
         text-align: center;
     }
 
+    .panel.panel-tabs.no-image > .panel-heading > .panel-title {
+        margin: 0px;
+    }
 }
 
 
